--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,9 @@ name: .NET
 
 on:
   push:
-    branches: [ main ]
+    branches: [ staging-test ]
   pull_request:
-    branches: [ main ]
+    branches: [ staging-test ]
 
 jobs:
   build:
