Instrumentation Key for App Insights

--- a/Tailspin.SpaceGame.Web/appsettings.json
+++ b/Tailspin.SpaceGame.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "InstrumentationKey": "7935b8f9-8651-4c5a-9779-f41f2506329d"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
